--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -16,7 +16,7 @@
   height: 500px;
   background-color: #c3caff;
   border-radius: 16px;
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.15);
   padding: 40px;
   display: flex;
   flex-direction: column;
@@ -34,6 +34,15 @@ h1 {
   color: #fff;
   margin-bottom: 30px;
   text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);
+}
+
+#NameInputContainer {
+  display: flex;
+}
+#Counter {
+  font-size: 11px;
+  color: gray;
+  padding: 10px;
 }
 
 #NameInput {
@@ -77,13 +86,29 @@ h1 {
   color: white;
   font-size: 18px;
   font-weight: 600;
-  padding: 12px 24px;
+  padding: 15px 24px;
+  border: none;
+  border-radius: 12px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  margin-top: 10px;
+  margin-left: 60px;
+}
+
+#GreetingButton:disabled {
+  background: linear-gradient(135deg, #8a8ea1, hsl(268, 5%, 49%));
+  color: white;
+  font-size: 18px;
+  font-weight: 600;
+  padding: 15px 24px;
   border: none;
   border-radius: 12px;
   cursor: pointer;
   transition: all 0.3s ease;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   margin-top: 20px;
+  margin-left: 60px;
 }
 
 #GreetingButton:hover {
