Added Header, Quiz input, Quiz page is updated

--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background: linear-gradient(135deg, #e0e7ff, #f0f0f0);
+  background: rgba(150, 168, 86, 1);
   font-family: "Segoe UI", Tahoma, sans-serif;
 }
 
@@ -11,13 +11,24 @@
   background: linear-gradient(135deg, #1d2540, #35336c);
 }
 
+.submitButtonWrapper {
+  margin-top: 20px;
+  margin-left: 60px;
+}
+
+.modeButtonWrapper {
+  position: absolute;
+  top: 500px;
+  right: 20px;
+}
+
 #InputContainer {
-  width: 800px;
+  width: 700px;
   height: 500px;
-  background-color: #c3caff;
+  background-color: rgba(254, 190, 155, 1);
   border-radius: 16px;
   box-shadow: 0 20px 30px rgba(0, 0, 0, 0.15);
-  padding: 40px;
+  padding: 30px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -30,10 +41,11 @@
 }
 
 h1 {
-  font-size: 40px;
-  color: #fff;
+  font-size: 30px;
+  color: #000000;
   margin-bottom: 30px;
   text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);
+  font-family: "Bungee", sans-serif;
 }
 
 #NameInputContainer {
@@ -54,6 +66,7 @@ h1 {
   padding: 8px 12px;
   outline: none;
   transition: all 0.3s ease;
+  border-radius: 40px;
 }
 
 #NameInput:focus {
@@ -71,6 +84,7 @@ h1 {
 
 #InputParagraph {
   font-size: 12px;
+  font-family: "Bungee", sans-serif;
 }
 
 #InputParagraph.noerror {
@@ -81,66 +95,11 @@ h1 {
   color: red;
 }
 
-#GreetingButton {
-  background: linear-gradient(135deg, #667eea, #764ba2);
-  color: white;
-  font-size: 18px;
-  font-weight: 600;
-  padding: 15px 24px;
-  border: none;
-  border-radius: 12px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-  margin-top: 10px;
-  margin-left: 60px;
+.modeButtonWrapper {
+  align-self: flex-end;
 }
 
-#GreetingButton:disabled {
-  background: linear-gradient(135deg, #8a8ea1, hsl(268, 5%, 49%));
-  color: white;
-  font-size: 18px;
-  font-weight: 600;
-  padding: 15px 24px;
-  border: none;
-  border-radius: 12px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+.inputButtonWrapper {
   margin-top: 20px;
   margin-left: 60px;
-}
-
-#GreetingButton:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
-}
-
-#GreetingButton:active {
-  transform: translateY(1px);
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-}
-
-#GreetingButton:focus {
-  outline: none;
-  box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.5);
-}
-
-#ToggleButton {
-  background: linear-gradient(135deg, #667eea, #764ba2);
-  color: white;
-  font-size: 12px;
-  font-weight: 600;
-  padding: 0px 12px;
-  width: 80px;
-  height: 50px;
-  border: none;
-  border-radius: 12px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-  margin-top: 12px;
-  position: absolute;
-  bottom: 20px;
-  right: 20px;
 }
