--- a/src/components/QuizInput.css
+++ b/src/components/QuizInput.css
@@ -1,23 +1,25 @@
-.quiz-container {
-  width: 500px;
-  padding: 20px;
-  margin: 20px auto;
-
-  border: 1px solid #ddd;
-  border-radius: 12px;
-
-  background: white;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
-
+.quiz-selection-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  transition: all 0.3s ease;
+  flex-direction: row;
+  background-color: rgba(150, 168, 86, 1);
+  border-radius: 40px;
+  margin: 33px;
+  width: 500px;
+  height: 78px;
+  filter: drop-shadow(0px 4px 4px rgb(0, 0, 0));
 }
 
-.quiz-container:hover {
-  background-color: #f8f4f4;
-  transform: translateY(-3px);
-  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.12);
+.quiz-selection-container:hover {
+  background-color: rgb(249, 212, 192);
+}
+
+.quiz-selection {
+  display: flex;
+  align-items: center;
+  height: 50px;
+  border: 1px solid black;
+}
+
+.quiz-input:hover {
+  background-color: rgb(137, 23, 23);
 }
